fix menu on mobile (#520)

--- a/input/assets/css/override.less
+++ b/input/assets/css/override.less
@@ -429,3 +429,19 @@ pre:hover .btn-copy {
 .clippy {
   color: #319af3;
 }
+
+@media (max-width: 767px) {
+  .main-header .sidebar-toggle,
+  .navbar-toggle {
+    padding: 20px 15px;
+  }
+
+  .navbar-collapse .navbar-nav {
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .branding {
+    margin-top: 15px;
+  }
+}
